--- a/public/scss/todo.scss
+++ b/public/scss/todo.scss
@@ -17,7 +17,8 @@ html, body {
 }
 
 input[type="text"],
-select {
+select,
+textarea{
     padding: 5px;
     border-radius: 4px;
     background: #FFF;
@@ -27,6 +28,7 @@ select {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     height: 29px;
+    color: #999;
 }
 
 a {
@@ -289,5 +291,9 @@ a {
         border-radius: 4px;
         box-shadow: 0 0 8px #828282;
         padding: 10px 20px;
+    }
+    .todo__item-desc{
+        width: 100%;
+        height: 100px;
     }
 }
