--- a/views/index.html
+++ b/views/index.html
@@ -126,11 +126,11 @@
                             <p v-show="errorMsg" class="message error">{{errorMsg}}</p>
                             <p class="form-row">
                                 <label>Name</label>
-                                <input type="text" v-model="item.name">
+                                <input type="text" v-model="item.name" class="todo__item-name">
                             </p>
                             <p class="form-row">
                                 <label>Desc.</label>
-                                <input type="text" v-model="item.desc">
+                                <textarea v-model="item.desc" class="todo__item-desc"></textarea>
                             </p>
                             <p class="form-row">
                                 <label>Time</label>
