--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,9 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-
 <div id="todo-app">
     <div id="header">
+        {{currentTime}}
         <span class="user" v-show="adminUser.username">Hi, {{adminUser.username}}. <a
                 @click="_logout($event)">Logout</a></span>
     </div>
